--- a/style.css
+++ b/style.css
@@ -3,23 +3,20 @@
 /**
  * Theme Name: Twentyten-xili Multilingual Child
  * Theme URI: http://dev.xiligroup.com/
- * Description: Twentyten based but including features for multilingual context with xili-language plugin >= 2.10+
+ * Description: Twentyten based but including features for multilingual context with xili-language plugin >= 2.12+
  * Author: dev.xiligroup.com ms
  * Author URI: http://dev.xiligroup.com/
- * Version: 3.1
+ * Version: 1.6.0
  * Tags: child theme, tabs, multilingual
  * Template: twentyten
  */
 
 @import url('../twentyten/style.css'); /* the most important line of the style.css of a child from his parent twentyten */
 
-/** must be used with xili-language 2.10+ **/
+/** new version nummbering - must be used with xili-language 2.12+ **/
 
 
 
 /* some few modifications for xili-language list */
 ul.xililanguagelist {list-style: none !important ; margin-left:0 !important ;}
 
-
-/** © dev.xiligroup.com - 2013-05-05 **/
-/** © dev.xiligroup.com - 2014-02-10 - adapted for new class permalinks **/
