--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
 /**
- * Theme Name: Twentyten-xili Multilingual Child
+ * Theme Name: Twentyten-xili
  * Theme URI: http://dev.xiligroup.com/
- * Description: Twentyten based but including features for multilingual context with xili-language plugin >= 2.12+
+ * Description: Multilingual Child of Twentyten based but including features for multilingual context with xili-language plugin >= 2.12+
  * Author: dev.xiligroup.com ms
  * Author URI: http://dev.xiligroup.com/
  * Version: 1.6.0
