fixes search form hook

--- a/style.css
+++ b/style.css
@@ -6,14 +6,14 @@
  * Description: Multilingual Child of Twentyten based but including features for multilingual context with xili-language plugin >= 2.12+
  * Author: dev.xiligroup.com ms
  * Author URI: http://dev.xiligroup.com/
- * Version: 1.6.0
+ * Version: 1.6.1
  * Tags: child theme, tabs, multilingual
  * Template: twentyten
  */
 
 @import url('../twentyten/style.css'); /* the most important line of the style.css of a child from his parent twentyten */
 
-/** new version nummbering - must be used with xili-language 2.12+ **/
+/** new version numbering - must be used with xili-language 2.12+ **/
 
 
 
